<resources>
    <string name="app_name">Memorizer</string>
    <string name="title_activity_lessons">Lessons</string>

    <string name="card_front_side">Front Side</string>
    <string name="card_back_side">Back Side</string>


    <string name="tab_home">Home</string>
    <string name="tab_library">Library</string>
    <string name="tab_add">Add</string>

    /*Dashboard Activity*/
    <string name="menu_dashboard_logoff">Logoff</string>

    /*Collection Activity*/
    <string name="collection_description">Collection</string>
    <string name="collection_mane">Name</string>
    <string name="collection_detail">Detail</string>
    <string name="collection_public">Public</string>
    <string name="collection_public_yes">Yes</string>
    <string name="collection_public_no">No</string>

    <string name="dialog_confirm_del_title">Confirm</string>
    <string name="dialog_confirm_del_msg">Are you sure you want to delete this record?</string>


    /*Lesson Maintenance Activity*/
    <string name="lesson_maintenance_description">Lesson</string>

    /*Lesson Play Activity*/
    <string name="lesson_play_description">Lesson</string>
    <string name="lesson_play_speak">Speak</string>

    /*Home*/
    <string name="home_lessons">Lessons</string>


    /*menus*/
    <string name="menu_standar_edit">Edit  </string>
    <string name="menu_standar_del">Delete</string>


    <array name="menuOptions">
        <item>Home</item>
        <item>Personal</item>
        <item>High scores</item>
        <item>Settings</item>
        <item>About</item>
    </array>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_activity_lesson_play">LessonPlayActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
